--- a/app.json
+++ b/app.json
@@ -1,10 +1,11 @@
 {
   "pages":[
-    "pages/videopage/videolist",
-    "pages/videopage/detailindex",
-    "pages/videopage/index",
-    "pages/videopage/sentence",
-    "pages/videopage/word",
+    "pages/vaudiopage/videolist",
+    "pages/vaudiopage/detailindex",
+    "pages/vaudiopage/index",
+    "pages/vaudiopage/sentence",
+    "pages/vaudiopage/word",
+    "pages/vaudiopage/explain",
     "pages/audiopage/audiolist",
     "pages/myinfo/index",
     "pages/collectlist/index",
@@ -25,13 +26,7 @@
     "position": "bottom",
     "list": [
       {
-        "pagePath": "pages/videopage/videolist",
-        "iconPath": "pages/images/video.png",
-        "selectedIconPath":"pages/images/video-fill.png",
-        "text": "视频"
-      },
-      {
-        "pagePath": "pages/audiopage/audiolist",
+        "pagePath": "pages/vaudiopage/videolist",
         "iconPath": "pages/images/sound.png",
         "selectedIconPath": "pages/images/sound-fill.png",
         "text": "音频"
